# rom-to-the-com

./: .env  .gitignore  README.md  _typos.toml
.github/: dependabot.yml
.github/workflows/: cicd.yml
data/: .env.sample  1e6e4fbf-b105-4c53-a436-88c423ff4ed0.csv  204b0027-c500-4c58-8e34-9f0fcfaaa391.csv  333fa255-4077-4570-86b6-3f3795d88d4f.csv  7525ee09-37d4-497d-9bf6-7d8b57601834.csv  @JustMeJas' Ultimate Guide to Rom-Coms - Jas' List of Rom-Coms-reduced.csv  @JustMeJas' Ultimate Guide to Rom-Coms - Jas' List of Rom-Coms.csv  c08b836e-3e41-4748-953f-870c374c5099.csv  c57c3f3e-601f-41c2-8ac8-7ba11db1c3a6.csv  claude_quickstart.py  films-filtered-claude-ranked-ids-images.csv  films-filtered-claude-ranked-ids.csv  films-filtered-claude-ranked-ids.jsonl  films-filtered-claude-ranked.csv  films-filtered-claude.csv  films.csv  ids.py  posters.py  pyproject.toml  rank.py  rank_validate.py
design/: site.pxd
rom_to_the_com/: .gitignore  mix.exs
rom_to_the_com/assets/js/: app.js
rom_to_the_com/config/: runtime.exs
rom_to_the_com/lib/: rom_to_the_com.ex  rom_to_the_com_web.ex
rom_to_the_com/lib/rom_to_the_com/: application.ex
rom_to_the_com/lib/rom_to_the_com_web/: gettext.ex  router.ex  telemetry.ex
rom_to_the_com/priv/: films.csv
site/: .env.sample  README.md  docker-compose.yml  mix.exs  railpack.json  railway.json
site/assets/: tailwind.config.js
site/assets/css/: app.css
site/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
site/lib/: rate_limit.ex  rom_to_the_com_web.ex
site/priv/: films.csv
site/test/: test_helper.exs
(+37 files in other folders)
