[tool.poetry]
name = "rom-to-the-com"
version = "0.1.0"
description = ""
authors = ["Jesse Claven <jesse.claven@me.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
anthropic = "^0.32.0"
python-dotenv = "^1.0.1"
more-itertools = "^10.3.0"
aiohttp = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
